# dvidmsg-protobuf

./: .gitignore  CMakeLists.txt  README  gen_cpp.bash  gen_py.bash
cpp/: CMakeLists.txt  serialization_benchmark.cpp  timer.cpp  timer.h
py/: dvidmsg.proto  proto_conversions.py  serialization_benchmark.py
